--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -49,11 +49,6 @@
         <div class="grid-content medium-5 large-3 login-right">
             <div class="grid-block">
                 <div class="small-10 medium-12 large-11 grid-container">
-                    <h4 class="headline">New?</h4>
-                </div>
-            </div>
-            <div class="grid-block">
-                <div class="small-10 medium-12 large-11 grid-container">
                     <p class="text">
                         If you loath to report status to management and hate to feed data to any sort of management
                         tools then join the world's only work platform where you work only for yourself.
@@ -66,20 +61,13 @@
                 <div class="small-10 medium-12 large-11 grid-container">
 
                     <p class="award-button">
-                        <a href="" class="button view-awards" data-ng-click="loginAlert()">View Award Vault</a>
+                        <a href="" class="button view-awards" data-ng-click="loginAlert()">Award Vault</a>
                         <a href="" class="button create-template" data-ng-click="loginAlert()">Create Template</a>
                     </p>
-                    <p class="about-knot-suite">
-                        <a href="#">About</a> |
-                        <a href="http://kswblog.azurewebsites.net">Blog</a> |
-                        <a href="#">User Agreement</a> |
-                        <a href="#">Comment</a> |
-                        <a href="/previewApp">Preview</a>
-                    </p>
-                    <p>
-                        <i class="fa fa-arrow-circle-o-right fa-icon-warning"></i><a  data-ng-href="/signUp"
-                                                                                      class="sign-up-link">SIGN UP</a>
-                    </p>
+                    <!--<p>-->
+                        <!--<i class="fa fa-arrow-circle-o-right fa-icon-warning"></i><a  data-ng-href="/signUp"-->
+                                                                                      <!--class="sign-up-link">SIGN UP</a>-->
+                    <!--</p>-->
                 </div>
             </div>
 
@@ -87,6 +75,20 @@
         </div>
 
         <div class="grid-block medium-1 large-2 hide-for-small"></div>
+    </div>
+
+    <div class="horizontal grid-block">
+        <div class="grid-block">
+            <div class="grid-container">
+                <p class="about-knot-suite">
+                    <a href="#">About</a> |
+                    <a href="http://kswblog.azurewebsites.net">Blog</a> |
+                    <a href="#">User Agreement</a> |
+                    <a href="#">Comment</a> |
+                    <a href="/previewApp">Preview</a>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 
