--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9143,6 +9143,8 @@ blockquote p {
 
 .preview-app {
   padding-top: 5%; }
+  .preview-app video {
+    width: 100%; }
   .preview-app .logo {
     padding-bottom: 40px; }
   .preview-app .preview-app-left {
