--- a/templates/preview/previewApp.html
+++ b/templates/preview/previewApp.html
@@ -51,7 +51,7 @@
         <div class="grid-content medium-5 large-4 preview-app-right knot-suite-box-background">
             <div class="grid-block">
                 <div class="small-10 medium-12 large-10 grid-content">
-                    <h3 class="text-color-white">What a preview invite?</h3>
+                    <h3 class="text-color-white">Want a preview invite?</h3>
                 </div>
 
             </div>
@@ -97,10 +97,9 @@
     <div class="horizontal grid-block">
         <div class="grid-block">
             <div class="grid-container">
-                <p class="text-color-white"> Others App for preview
-                    <a href="/previewKnotSoft">KnotSoft</a> |
-                    <a href="/previewKnotNpi">KnotNPI</a> |
-                    <a href="/previewKnotSilicon">KnotSilicon</a>
+                <p class="text-color-white">
+                    <a href="" class="text-color-white">User Agreement</a> |
+                    <a href="" class="text-color-white">Contact</a>
                 </p>
             </div>
         </div>
