--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -60,10 +60,10 @@
             <div class="grid-block">
                 <div class="small-10 medium-12 large-11 grid-container">
 
-                    <p class="award-button">
-                        <a href="" class="button view-awards" data-ng-click="loginAlert()">Award Vault</a>
-                        <a href="" class="button create-template" data-ng-click="loginAlert()">Create Template</a>
-                    </p>
+                    <!--<p class="award-button">-->
+                        <!--<a href="" class="button view-awards" data-ng-click="loginAlert()">Award Vault</a>-->
+                        <!--<a href="" class="button create-template" data-ng-click="loginAlert()">Create Template</a>-->
+                    <!--</p>-->
                     <!--<p>-->
                         <!--<i class="fa fa-arrow-circle-o-right fa-icon-warning"></i><a  data-ng-href="/signUp"-->
                                                                                       <!--class="sign-up-link">SIGN UP</a>-->
@@ -81,11 +81,9 @@
         <div class="grid-block">
             <div class="grid-container">
                 <p class="about-knot-suite">
-                    <a href="#">About</a> |
-                    <a href="http://kswblog.azurewebsites.net">Blog</a> |
+                    <!--<a href="http://kswblog.azurewebsites.net">Blog</a> |-->
                     <a href="#">User Agreement</a> |
-                    <a href="#">Comment</a> |
-                    <a href="/previewApp">Preview</a>
+                    <a href="#">Contact</a>
                 </p>
             </div>
         </div>
