--- a/templates/preview/previewKnotSilicon.html
+++ b/templates/preview/previewKnotSilicon.html
@@ -50,7 +50,7 @@
         <div class="grid-content medium-5 large-4 preview-app-right knot-suite-box-background">
             <div class="grid-block">
                 <div class="small-10 medium-12 large-10 grid-content">
-                    <h3 class="text-color-white">What a preview invite?</h3>
+                    <h3 class="text-color-white">Want a preview invite?</h3>
                 </div>
 
             </div>
