landing page design change

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -65,9 +65,9 @@
                         <!--<a href="" class="button create-template" data-ng-click="loginAlert()">Create Template</a>-->
                     <!--</p>-->
                     <!--<p>-->
-                        <!--<i class="fa fa-arrow-circle-o-right fa-icon-warning"></i><a  data-ng-href="/signUp"-->
-                                                                                      <!--class="sign-up-link">SIGN UP</a>-->
-                    <!--</p>-->
+                        <i class="fa fa-arrow-circle-o-right fa-icon-warning"></i><a  data-ng-href="/signUp"
+                                                                                      class="sign-up-link">SIGN UP</a>
+                    </p>
                 </div>
             </div>
 
