--- a/templates/preview/previewApp.html
+++ b/templates/preview/previewApp.html
@@ -81,11 +81,13 @@
                 </div>
 
             </div>
-            <div class="grid-block">
+            <div class="grid-block app-preview-links">
                 <div class="grid-content">
-                    <p class="about-knot-suite">
-                        <a href="#">App Download link</a> |
-                        <a href="/knotSuiteInstruction">App Installation Instruction</a>
+                    <p>More previews</p>
+                    <p class="links">
+                        <a href="/previewKnotSilicon">KnotSilicon</a> |
+                        <a href="/previewKnotNpi">KnotNpi</a> |
+                        <a href="/previewKnotSoft">KnotSoft</a>
                     </p>
                 </div>
             </div>
@@ -94,8 +96,8 @@
         <div class="grid-block medium-1 large-1 hide-for-small"></div>
     </div>
 
-    <div class="horizontal grid-block">
-        <div class="grid-block">
+    <div class="horizontal grid-block margin-0">
+        <div class="grid-block margin-top-25">
             <div class="grid-container">
                 <p class="text-color-white">
                     <a href="" class="text-color-white">User Agreement</a> |
