--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8818,6 +8818,12 @@ blockquote p {
 .margin-bottom-10 {
   margin-bottom: 10px; }
 
+.margin-top-25 {
+  margin-top: 25px; }
+
+.margin-0 {
+  margin: 0 !important; }
+
 .selected-history-background {
   background-color: #c2e8d0; }
 
@@ -9141,47 +9147,54 @@ blockquote p {
       margin-top: 4px;
       margin-left: 70px; }
 
-.preview-app {
-  padding-top: 5%; }
-  .preview-app video {
-    width: 100%; }
-  .preview-app .logo {
-    padding-bottom: 40px; }
-  .preview-app .preview-app-left {
-    padding: 20px; }
-    .preview-app .preview-app-left .info {
-      color: #ffffff; }
-      .preview-app .preview-app-left .info a {
-        color: #ffffff;
-        font-weight: bold; }
-    .preview-app .preview-app-left .login-button {
-      width: 100%;
-      margin: 0 0 1rem 0; }
-    .preview-app .preview-app-left .sign-up-title {
-      color: #ffc520;
-      font-size: 25px;
-      font-weight: bold; }
-    .preview-app .preview-app-left .sign-up-hints {
-      color: #ffffff; }
-  .preview-app .preview-app-right {
-    padding: 20px; }
-    .preview-app .preview-app-right .headline {
-      color: #ffc520; }
-    .preview-app .preview-app-right .text {
-      color: #ffffff; }
-    .preview-app .preview-app-right .sign-up-link {
+.preview-app video {
+  width: 100%; }
+.preview-app .logo {
+  padding-bottom: 40px; }
+.preview-app .preview-app-left {
+  padding: 20px; }
+  .preview-app .preview-app-left .info {
+    color: #ffffff; }
+    .preview-app .preview-app-left .info a {
       color: #ffffff;
-      font-weight: bold;
-      text-transform: uppercase;
-      padding: 5px 0px 0px 5px; }
-  .preview-app .about-knot-suite {
+      font-weight: bold; }
+  .preview-app .preview-app-left .login-button {
+    width: 100%;
+    margin: 0 0 1rem 0; }
+  .preview-app .preview-app-left .sign-up-title {
+    color: #ffc520;
+    font-size: 25px;
+    font-weight: bold; }
+  .preview-app .preview-app-left .sign-up-hints {
+    color: #ffffff; }
+.preview-app .preview-app-right {
+  padding: 20px; }
+  .preview-app .preview-app-right .app-preview-links {
+    margin-top: 10%; }
+    .preview-app .preview-app-right .app-preview-links p {
+      color: #000000;
+      margin-bottom: 0; }
+    .preview-app .preview-app-right .app-preview-links .links a {
+      color: #000000; }
+      .preview-app .preview-app-right .app-preview-links .links a:hover {
+        color: #000000; }
+  .preview-app .preview-app-right .headline {
     color: #ffc520; }
-    .preview-app .about-knot-suite a {
-      color: #DAD0D0; }
-  .preview-app .award-button .view-awards {
-    background-color: #A8B031; }
-  .preview-app .award-button .create-template {
-    background-color: #519D47; }
+  .preview-app .preview-app-right .text {
+    color: #ffffff; }
+  .preview-app .preview-app-right .sign-up-link {
+    color: #ffffff;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 5px 0px 0px 5px; }
+.preview-app .about-knot-suite {
+  color: #ffc520; }
+  .preview-app .about-knot-suite a {
+    color: #DAD0D0; }
+.preview-app .award-button .view-awards {
+  background-color: #A8B031; }
+.preview-app .award-button .create-template {
+  background-color: #519D47; }
 
 .preview-app-divider {
   max-width: 1.33%; }
@@ -9192,19 +9205,63 @@ blockquote p {
 .float-right {
   float: right; }
 
-.instruction {
-  padding-top: 5%; }
-  .instruction .instruction-body {
-    padding-left: 16px;
-    background-color: #105A52; }
-    .instruction .instruction-body img {
-      padding-top: 12px; }
-  .instruction .back-to-home {
+.instruction video {
+  width: 100%; }
+.instruction .logo {
+  padding-bottom: 40px; }
+.instruction .instruction-left {
+  padding: 20px; }
+  .instruction .instruction-left .video-description p {
+    line-height: 0;
+    margin-bottom: 0; }
+  .instruction .instruction-left .info {
+    color: #ffffff; }
+    .instruction .instruction-left .info a {
+      color: #ffffff;
+      font-weight: bold; }
+  .instruction .instruction-left .login-button {
+    width: 100%;
+    margin: 0 0 1rem 0; }
+  .instruction .instruction-left .sign-up-title {
+    color: #ffc520;
+    font-size: 25px;
+    font-weight: bold; }
+  .instruction .instruction-left .sign-up-hints {
+    color: #ffffff; }
+.instruction .instruction-right {
+  padding: 20px; }
+  .instruction .instruction-right .download-links {
+    margin-top: 8%; }
+    .instruction .instruction-right .download-links a {
+      color: #000000; }
+  .instruction .instruction-right .headline {
+    color: #ffc520; }
+  .instruction .instruction-right .text {
+    color: #ffffff; }
+  .instruction .instruction-right .sign-up-link {
     color: #ffffff;
-    padding: 12px;
-    float: right; }
-    .instruction .back-to-home:hover {
-      color: #ffffff; }
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 5px 0px 0px 5px; }
+.instruction .about-knot-suite {
+  color: #ffc520; }
+  .instruction .about-knot-suite a {
+    color: #DAD0D0; }
+.instruction .award-button .view-awards {
+  background-color: #A8B031; }
+.instruction .award-button .create-template {
+  background-color: #519D47; }
+
+.instruction-divider {
+  max-width: 1.33%; }
+
+.instruction-videos video {
+  float: left;
+  height: 100px;
+  width: 75px;
+  margin-right: 10px; }
+.instruction-videos video:last-of-type {
+  margin-right: 0; }
 
 .ksw-header {
   padding: 2rem;
