--- a/templates/instruction/knotSilicon.html
+++ b/templates/instruction/knotSilicon.html
@@ -1,28 +1,101 @@
 
 <div class="instruction">
-    <div class="grid-block medium-horizontal align-center grid-block">
-        <div class="small-10 medium-10 large-10 grid-container instruction-body">
-            <img src="assets/img/knotsilicon.png"/>
-            <a href="/" class="back-to-home">BACK TO HOME</a>
-        </div>
-        <div class="small-10 medium-10 large-10 grid-container instruction-body">
-            <h3 class="text-color-white">Installation Instruction</h3>
-            <p class="text-color-white">
-                Apps make using your PC easier by opening up new ways for you to get things done and have some fun.
-                Windows 8.1 and Windows RT 8.1 come with built-in apps that help you socialize, stay in touch,
-                share and view documents, organize photos, listen to music, and watch movies, but you can find
-                even more apps in the Windows Store.Note: You need to have Windows 8.1 or Windows RT 8.1 to
-                see and install apps from the Windows Store. If you don’t have Windows 8.1 or Windows RT 8.1,
-                you can check out some of the popular apps available in the Store.
-            </p>
-            <p class="text-color-white">
-                Browse featured apps and lists. If you're not sure what kind of app you want,
-                a good place to start is the featured apps in the Store. Start scrolling to the
-                right to view lists of popular apps, new releases, top paid or free apps.
-                (To see all the apps in a specific list, tap or click the name of the list.)
-                You'll also see personalized app recommendations in Picks for you, based on apps you own and apps you've rated.
-            </p>
+    <div class="vertical medium-horizontal align-center grid-block">
+        <div class="grid-block medium-1 large-1 hide-for-small"></div>
 
+        <div class="grid-content medium-5 large-4 preview-app-left">
+
+        </div>
+
+        <div class="grid-content medium-1 preview-app-divider">
+
+        </div>
+
+        <div class="grid-content medium-5 large-4 instruction-right">
+            <!--<a href="/" class="text-color-white float-right">BACK TO HOME</a>-->
+        </div>
+
+        <div class="grid-block medium-1 large-2 hide-for-small"></div>
+    </div>
+
+    <div class="vertical medium-horizontal align-center grid-block">
+        <div class="grid-block medium-1 large-1 hide-for-small"></div>
+
+        <div class="grid-content medium-5 large-4 instruction-left knot-suite-box-background">
+            <div class="grid-block">
+                <div class="small-10 medium-10 large-10 grid-content">
+                    <img src="assets/img/knotsilicon.png"/>
+                </div>
+
+            </div>
+
+            <div class="grid-block">
+                <div class="small-10 medium-10 large-10 grid-content video-description">
+                    <h3 class="text-color-white">What does it do?</h3>
+
+                    <p class="text-color-white">The most rewarding way to work</p>
+                </div>
+            </div>
+
+            <div class="grid-block">
+                <div class="small-10 medium-10 large-10 grid-content instruction-videos">
+                    <video>
+                        <source type="video/webm" src="/assets/videos/sample.webm">
+                    </video>
+                    <video>
+                        <source type="video/webm" src="/assets/videos/sample.webm">
+                    </video>
+                    <video>
+                        <source type="video/webm" src="/assets/videos/sample.webm">
+                    </video>
+                    <video>
+                        <source type="video/webm" src="/assets/videos/sample.webm">
+                    </video>
+                </div>
+
+
+                <div class="small-10 medium-10 large-10 grid-content">
+                    <video height="250px" controls="">
+                        <source type="video/webm" src="/assets/videos/sample.webm">
+                    </video>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="grid-content medium-1 instruction-divider"></div>
+
+        <div class="grid-content medium-5 large-4 instruction-right knot-suite-box-background">
+            <div class="grid-block">
+                <div class="small-10 medium-12 large-10 grid-content">
+                    <i class="fa fa-arrow-circle-o-right fa-icon-warning"></i><a data-ng-href="/signUp"
+                                                                                 class="sign-up-link">SIGN UP</a>
+                </div>
+
+            </div>
+            <div class="grid-block">
+                <div class="small-10 medium-12 large-10 grid-content download-links">
+                    <h5><a href="">Download KnotSuite for Windows 8 desktop/Tablet</a></h5>
+                    <p><a href="">Installation Instruction</a></p>
+                    <h5><a href="">Download KnotSuite for Windows 8 Phone</a></h5>
+                    <h5><a href="">Download KnotSuite for iPhone</a></h5>
+                    <h5><a href="">Download KnotSuite for Android phone</a></h5>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="grid-block medium-1 large-1 hide-for-small"></div>
+    </div>
+    <div class="horizontal grid-block">
+        <div class="grid-block">
+            <div class="grid-container">
+                <p class="about-knot-suite">
+                    <!--<a href="http://kswblog.azurewebsites.net">Blog</a> |-->
+                    <a href="#">User Agreement</a> |
+                    <a href="#">Contact</a>
+                </p>
+            </div>
         </div>
     </div>
 </div>
